fixed tabbar is not being completely visible

--- a/src/HeaderFooter/Component/css/Header.css
+++ b/src/HeaderFooter/Component/css/Header.css
@@ -4,15 +4,18 @@ html {
 .base {
   width: 100%;
   transition: all 0.4s;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.273);
   display: flex;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  filter: blur(1px);
+ 
+  border-bottom: 1px solid rgba(170, 95, 95, 0.1);
   justify-content: space-between;
   align-items: center;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 5;
+  height:120px;
 }
 .fixedHeader {
   position: fixed;
